2012-05-03  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	Handle hurd userspace partitions.

	* util/getroot.c (find_hurd_root_device): New function.
	(grub_guess_root_devices): Use find_hurd_root_device on Hurd.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (convert_system_partition_to_system_disk); Add etherd
	names.
	Reported by: Bastian Blank.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/btrfs.c (grub_btrfs_lzo_decompress): Fix offset when
	crossing page boundary.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix B-tree search in BFS, especially in presence of non-ASCII
	characters.

	* grub-core/fs/bfs.c (bfs_strcmp): New function.
	(find_in_b_tree): Use standard bsearch + btree algorithm.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (cmd_cmp): Avoid comparing devices, pipes
	and so on.

2012-05-03  Matthew Garrett  <mjg@redhat.com>
2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	Suspend broadcom cards in order to stop their DMA.

	* grub-core/Makefile.am (KERNEL_HEADER_FILES): Add pci.h on x86 EFI.
	* grub-core/Makefile.core.def (kernel): Add pci.c on x86 EFI.
	(pci): Don't build on x86 EFI.
	* grub-core/bus/pci.c (grub_pci_find_capability): New function.
	* grub-core/kern/efi/mm.c (stop_broadcom) [__i386__ || __x86_64__]:
	New function.
	(grub_efi_finish_boot_services) [__i386__ || __x86_64__]: Call
	stop_broadcom if running on EFI.
	* include/grub/pci.h (GRUB_PCI_CLASS_NETWORK): New enum value.
	(GRUB_PCI_CAP_POWER_MANAGEMENT): Likewise.
	(GRUB_PCI_VENDOR_BROADCOM): Likewise.
	(grub_pci_find_capability): New proto.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi: Remove dot from the extension as it apparently
	doesn't work with some makeinfo versions.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/Makefile.in.in: Make msgfmt output in little-endian in accordance
	with GRUB expectance.
